unique users time filtering
